scss to fix light scrollbar showing

--- a/src/global.scss
+++ b/src/global.scss
@@ -20,6 +20,7 @@
 
 html {
   scroll-behavior: smooth;
+  color-scheme: dark; // https://github.com/mdn/yari/pull/6102
 }
 
 :root {
@@ -57,6 +58,54 @@ ul, ol {
   max-width: auto;
   min-height: 500px;
 }
+
+body {
+  scrollbar-color: green black;
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px; }
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
+}
+
+
+::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #393812;
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+  background: #000;
+}
+
+// ===
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+// ====
+
 
 .button-text {
   //font-size: 72px;
@@ -147,7 +196,8 @@ ul, ol {
 }
 
 .tox-menubar {
-  overflow-x: scroll;
+  //overflow-x: scroll;
+  overflow-x: hidden;
 }
 
 //ion-button::part(native) {
